--- a/src/index.css
+++ b/src/index.css
@@ -57,7 +57,7 @@
   --background-image-card: url('assets/images/thumbnail-background.svg');
 
   /* Custom breakpoints */
-  --breakpoint-wide: 1440px;
+  --breakpoint-wide: 1240px;
 }
 
 @layer components {
@@ -71,36 +71,34 @@
   }
 }
 
-@layer utilities {
-  .padding {
-    @apply sm:px-16 px-8 sm:py-24 py-12;
-  }
+@utility padding {
+  @apply sm:px-16 px-8 sm:py-24 py-12;
+}
 
-  .padding-x {
-    @apply sm:px-16 px-8;
-  }
+@utility padding-x {
+  @apply sm:px-16 px-8;
+}
 
-  .padding-y {
-    @apply sm:py-24 py-12;
-  }
+@utility padding-y {
+  @apply sm:py-24 py-12;
+}
 
-  .padding-l {
-    @apply sm:pl-16 pl-8;
-  }
+@utility padding-l {
+  @apply sm:pl-16 pl-8;
+}
 
-  .padding-r {
-    @apply sm:pr-16 pr-8;
-  }
+@utility padding-r {
+  @apply sm:pr-16 pr-8;
+}
 
-  .padding-t {
-    @apply sm:pt-24 pt-12;
-  }
+@utility padding-t {
+  @apply sm:pt-24 pt-12;
+}
 
-  .padding-b {
-    @apply sm:pb-24 pb-12;
-  }
+@utility padding-b {
+  @apply sm:pb-24 pb-12;
+}
 
-  .info-text {
-    @apply font-montserrat text-slate-gray text-lg leading-7;
-  }
+@utility info-text {
+  @apply font-montserrat text-slate-gray text-lg leading-7;
 }
